# onlab

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  box_collision.typ  friction.typ  gjk.typ  inverse_projection.typ  notes.typ  render_state.typ  rtree.typ
src/: aabb.rs  blur-fs.glsl  blur-gs.glsl  blur-vs.glsl  camera.rs  collider.cpp  collider.hpp  collider.rs  context.rs  empty-fs.glsl  geometry.cpp  geometry.hpp  gjk.rs  lib.rs  light.rs  main.cpp  main.rs  main_scene.rs  mesh.cpp  mesh.hpp  mesh.rs  meshes.rs  object.cpp  object.hpp  object.rs  phong-fs.glsl  phong-vs.glsl  ray.rs  recording.rs  render_state.rs  rtree.rs  scene.rs  shader.cpp  shader.hpp  shader_program.rs  shadow-fs.glsl  shadow-gs.glsl  shadow-vs.glsl  shadow_util.rs  simple-vs.glsl  (+8 more)
src/engine/: camera.cpp  camera.hpp  context.cpp  context.hpp  input.hpp
src/shader/: vertex.glsl
