[package]
name = "onlab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
egui = "0.25.0"
egui_glow = { version = "0.25.0", features = [ "winit" ] }
glow = "0.13.1"
glutin = "0.31.3"
glutin-winit = "0.4.2"
raw-window-handle = "0.5.2"
winit = { version = "0.29.10", features = [ "wayland" ] }

