[package]
name = "onlab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bytemuck = "1.14.3"
egui = "0.25.0"
egui_glow = { version = "0.25.0", features = [ "winit" ] }
glow = "0.13.1"
glutin = "0.31.3"
glutin-winit = "0.4.2"
nalgebra = "0.32.4"
rand = "0.8.5"
raw-window-handle = "0.5.2"
smallvec = "1.13.2"
winit = { version = "0.29.10", features = [ "wayland" ] }

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[build]
rustflags = [ "-C target-cpu=native" ]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
incremental = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = true
lto = "fat"
incremental = false
codegen-units = 1
panic = "abort"

[lints.rust]
let_underscore_drop = "warn"
missing_debug_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_tuple_struct_fields = "warn"
variant_size_differences = "warn"


[lints.clippy]
pedantic = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

nursery = "warn"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
module_name_repetitions = "allow"
